# volcanic

./: README.md  cleanup.sh  dv.py  dv1.py  dv2.py  enyne_rawprofiles.xlsx  exceptions.py  helpers.py  plotting.py  plotting2d.py  plotting3d.py  pyproject.toml  requirements.txt  setup.py  test_modules.py  tof.py  volcanic.py
.github/workflows/: github-deploy.yml  github-pytest.yml
example/: tof_volcano_4.csv
examples/: descriptor_mbh_volcano.xlsx  formate.xlsx  hydroformylation.xlsx  hydrogenation_test.xlsx
navicat_volcanic/: __main__.py  dv1.py  dv2.py  exceptions.py  helpers.py  plotting2d.py  plotting3d.py  postprocessing.py  test_modules.py  tof.py  volcanic.py
pretty_plotting_example/: regions_es_volcano_nd2.csv  replotting_2d_volcano.ipynb  replotting_3d_volcano.ipynb  tof_volcano_nd2.csv
pretty_plotting_example/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  replotting_volcano-checkpoint.ipynb
test_files/: aryl_ether_cleavage.xlsx  carboamination.xlsx  cc_genome.xlsx  cyclopropanation.xlsx  enyne_test.xlsx  five_membered_substrate_suzuki.xlsx  hydroformylation.xlsx  hydrogenation_test.xlsx  six_membered_substrate_suzuki.xlsx  suzuki.xlsx
tests/: aryl_ether_cleavage.xlsx  example.xlsx  five_membered_substrate_suzuki.xlsx  suzuki_ref.xlsx  suzuki_s.xlsx
volcanic/: __main__.py  dv1.py  dv2.py  helpers.py  plotting2d.py  plotting3d.py  test_modules.py  tof.py  volcanic.py
